feat: document register owner API
