# server/swagger/swagger.json
@@ -161,6 +161,93 @@
           ]
         }
       },
+      "/api/v1/owners": {
+        "post": {
+          "tags": [
+            "Owners"
+          ],
+          "summary": "",
+          "description": "",
+          "parameters": [
+            {
+              "in": "body",
+              "name": "body",
+              "required": true,
+              "schema": {
+                "$ref": "#/definitions/Owner"
+              }
+            }
+          ],
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "201": {
+              "description": "Created",
+              "schema": {
+                "$ref": "#/definitions/Owner"
+              }
+            },
+            "500": {
+              "description": "Internal Server Error"
+            }
+          },
+          "security": [
+            {
+              "Bearer": [
+                "global"
+              ]
+            }
+          ]
+        },
+        "get": {
+          "tags": [
+            "Owners"
+          ],
+          "summary": "",
+          "description": "",
+          "parameters": [],
+          "consumes": [
+            "application/json"
+          ],
+          "produces": [
+            "application/json"
+          ],
+          "responses": {
+            "200": {
+              "description": "OK",
+              "schema": {
+                "type": "array",
+                "items": {
+                  "$ref": "#/definitions/Owner"
+                }
+              }
+            },
+            "500": {
+              "description": "Internal Server Error",
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "error": {
+                    "type": "string",
+                    "example": "Internal Server Error"
+                  }
+                }
+              }
+            }
+          },
+          "security": [
+            {
+              "Bearer": [
+                "global"
+              ]
+            }
+          ]
+        }
+      },
       "/api/v1/owners/{id}": {
         "put": {
           "tags": [
@@ -295,52 +382,6 @@
             },
             "500": {
               "description": "Internal Server Error"
-            }
-          },
-          "security": [
-            {
-              "Bearer": [
-                "global"
-              ]
-            }
-          ]
-        }
-      },
-      "/api/v1/owners": {
-        "get": {
-          "tags": [
-            "Owners"
-          ],
-          "summary": "",
-          "description": "",
-          "parameters": [],
-          "consumes": [
-            "application/json"
-          ],
-          "produces": [
-            "application/json"
-          ],
-          "responses": {
-            "200": {
-              "description": "OK",
-              "schema": {
-                "type": "array",
-                "items": {
-                  "$ref": "#/definitions/Owner"
-                }
-              }
-            },
-            "500": {
-              "description": "Internal Server Error",
-              "schema": {
-                "type": "object",
-                "properties": {
-                  "error": {
-                    "type": "string",
-                    "example": "Internal Server Error"
-                  }
-                }
-              }
             }
           },
           "security": [
@@ -730,11 +771,11 @@
           },
           "updatedAt": {
             "type": "string",
-            "example": "7/6/2022, 10:32:56 AM"
+            "example": "7/6/2022, 10:42:27 AM"
           },
           "createdAt": {
             "type": "string",
-            "example": "7/6/2022, 10:32:56 AM"
+            "example": "7/6/2022, 10:42:27 AM"
           }
         }
       },
@@ -784,11 +825,11 @@
           },
           "updatedAt": {
             "type": "string",
-            "example": "7/6/2022, 10:32:56 AM"
+            "example": "7/6/2022, 10:42:27 AM"
           },
           "createdAt": {
             "type": "string",
-            "example": "7/6/2022, 10:32:56 AM"
+            "example": "7/6/2022, 10:42:27 AM"
           }
         }
       },
@@ -835,11 +876,11 @@
           },
           "updatedAt": {
             "type": "string",
-            "example": "7/6/2022, 10:32:56 AM"
+            "example": "7/6/2022, 10:42:27 AM"
           },
           "createdAt": {
             "type": "string",
-            "example": "7/6/2022, 10:32:56 AM"
+            "example": "7/6/2022, 10:42:27 AM"
           }
         }
       }
